# kanvas

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: hello.c
include/kvs/: canvas.h  color.h  config.h.in  drawable.h  image.h  kvs.h  types.h
include/kvs/drawables/: image.h  rect.h
include/mrl/: canvas.h  color.h  config.h.in  drawable.h  image.h  mrl.h  types.h
include/mrl/drawables/: image.h  rect.h
src/: canvas.c  color.c  drawable.c  image.c  image_png.c  image_ppm.c
src/drawables/: image.c  rect.c
src/internal/: canvas_internal.h  common.h  drawable_internal.h  image_internal.h
tests/: test_basic.c
